RESOLVED FIXED74316
URL arg and printing fixes
https://bugs.webkit.org/show_bug.cgi?id=74316
Summary URL arg and printing fixes
Robin Dunn
Reported 2011-12-12 12:21:35 PST
Created attachment 118824 [details] printing fix patch Add a URL argument to the wxWebView constructor, and fix page calculations and margins on Windows and Mac.
Attachments
printing fix patch (13.28 KB, patch)
2011-12-12 12:21 PST, Robin Dunn
kevino: review+
kevino: commit-queue-
Kevin Ollivier
Comment 1 2011-12-13 15:54:10 PST
Landed in r102715, thanks!
Note You need to log in before you can comment on or make changes to this bug.