[wx] Add a URL argument to the wxWebView constructor, and fix page calculations and margins on Windows and Mac. https://bugs.webkit.org/show_bug.cgi?id=74316

Reviewed by Kevin Ollivier.


Canonical link: https://commits.webkit.org/91103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102715 268f45cc-cd09-0410-ab3c-d52691b4dbfc